--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,14 @@ body {
     font-family: monospace;
     text-align: center;
 }
+img {max-width:100%}
 
 #img-div img {
     margin-left: 10%;
     border: 2px solid rgb(59, 44, 44);
-
-    
+    height: auto;
+    width: 80%;
+    display: block;
 }
 #img-caption {
     color: rgb(51, 63, 51);
@@ -51,13 +53,22 @@ footer p {
 }
 
     /* Desktops and laptops ----------- */
-@media only screen  and (min-width : 400px) {
+@media only screen  and (max-width : 375px) {
+
+    #title {
+        border: 1px solid rgb(59, 44, 44);
+        color: rgb(51, 63, 51);
+        font-size: 5px;
+        font-family: monospace;
+        text-align: center;
+    }
+
     #img-div img {
         margin-top: 10%;
         margin-left: 10%;
         border: 2px solid rgb(59, 44, 44);
-        height: 80%;
-        width: 80%;
+        height: 150px;
+        width: 325px;
     }
     footer p {
     margin-left: 33%;
@@ -72,7 +83,7 @@ footer p {
     }
     
     /* Large screens ----------- */
-    @media only screen  and (min-width : 760px) {
+    @media only screen  and (max-width : 760px) {
         #img-div img {
             margin-top: 10%;
             margin-left: 10%;
